--- a/infra/docker/php/xdebug.ini
+++ b/infra/docker/php/xdebug.ini
@@ -1,7 +1,10 @@
 [xdebug]
-xdebug.mode = debug
-xdebug.start_with_request = yes
-xdebug.client_host = host.docker.internal
-xdebug.client_port = 9003
-xdebug.log = /tmp/xdebug.log
-xdebug.idekey = "PHPSTORM"
+zend_extension=xdebug.so
+xdebug.mode=develop,coverage,debug,profile
+xdebug.idekey=docker
+xdebug.start_with_request=yes
+xdebug.log=/tmp/xdebug.log
+xdebug.log_level=10
+xdebug.client_port=9003
+; xdebug.client_host=host.docker.internal
+xdebug.client_host=localhost
